--- a/index.html
+++ b/index.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body class="text-center w-full">
+    <link href="/dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="text-center w-full">
     <div class="container">
-        <h1 class="text-5xl">Chronometer</h1>
-        <label for="hourly-rate-input" id="hourly-rate-label">Prix par heure (€):</label>
-        <input type="number" id="hourly-rate-input" min="0" step="0.01" value="10">
-        <div id="timer">00:00:00</div>
-        <div class="inline-flex rounded-md shadow-sm" role="group">
-            <button type="button" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" id="start">
-                <i class="fa-solid fa-hourglass-start pr-4"></i>
-                Start
-            </button>
-            <button type="button" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border-t border-b border-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white" id="pause">
-                <i class='fa-solid fa-pause pr-4'></i>
-                Pause
-            </button>
-            <button type="button" id="reset" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-r-md hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white">
-                <i class="fa-solid fa-power-off pr-4"></i>
-                Start over
-            </button>
-        </div>
-        <div id="elapsed-time-title">Elapsed time:</div>
-        <div id="elapsed-time-value">00:00:00</div>
-        <div id="payment-amount-title">Total:</div>
-        <div id="payment-amount-value">0 €</div>
+      <h1 class="text-3xl">Self-employed bill calculator</h1>
+      <label
+        for="hourly-rate-input"
+        id="hourly-rate-label"
+        class="block mb-2 text-sm font-medium text-gray-900 mt-4"
+        >How much you ask for an hour of work (€):</label
+      >
+      <input
+        class="w-20 p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500"
+        type="number"
+        id="hourly-rate-input"
+        min="0"
+        step="0.1"
+        value="10"
+      />
+      <div class="text-7xl mt-4 mb-4" id="timer">00:00:00</div>
+      <div class="inline-flex rounded-md shadow-sm" role="group">
+        <button
+          type="button"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+          id="start"
+        >
+          <i class="fa-solid fa-hourglass-start pr-4"></i>
+          Start
+        </button>
+        <button
+          type="button"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border-t border-b border-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+          id="pause"
+        >
+          <i class="fa-solid fa-pause pr-4"></i>
+          Pause
+        </button>
+        <button
+          type="button"
+          id="reset"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-r-md hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+        >
+          <i class="fa-solid fa-power-off pr-4"></i>
+          Start over
+        </button>
+      </div>
+      <div class="mt-4" id="elapsed-time-title">You've been working since:</div>
+      <div id="elapsed-time-value">00:00:00</div>
+      <div class="mt-4"id="payment-amount-title">You should be paid:</div>
+      <div id="payment-amount-value">0 €</div>
     </div>
     <footer>
-        <script src="src/script.js"></script>
-        <script src="https://kit.fontawesome.com/d74732e987.js" crossorigin="anonymous"></script>
+      <script src="src/script.js"></script>
+      <script
+        src="https://kit.fontawesome.com/d74732e987.js"
+        crossorigin="anonymous"
+      ></script>
     </footer>
-</body>
+  </body>
 </html>
