small traductions fixing

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body class="text-center w-full">
     <div class="container">
-      <h1 class="text-3xl">Self-employed bill calculator</h1>
+      <h1 class="text-3xl mt-4">Self-employed bill calculator</h1>
       <label
         for="hourly-rate-input"
         id="hourly-rate-label"
         class="block mb-2 text-sm font-medium text-gray-900 mt-4"
-        >How much you ask for an hour of work (€):</label
+        >How much you charge for an hour of work (€):</label
       >
       <input
         class="w-20 p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500"
@@ -52,7 +52,7 @@
       </div>
       <div class="mt-4" id="elapsed-time-title">You've been working since:</div>
       <div id="elapsed-time-value">00:00:00</div>
-      <div class="mt-4"id="payment-amount-title">You should be paid:</div>
+      <div class="mt-4" id="payment-amount-title">You should be paid:</div>
       <div id="payment-amount-value">0 €</div>
     </div>
     <footer>
