--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bill Calculator</title>
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
-  <body class="text-center w-full">
+  <body class="text-center w-full text-amber-950">
     <div class="container">
       <h1 class="text-3xl mt-4">Self-employed bill calculator</h1>
       <label
         for="hourly-rate-input"
         id="hourly-rate-label"
-        class="block mb-2 text-sm font-medium text-gray-900 mt-4"
+        class="block mb-2 text-sm font-medium mt-4"
         >How much you charge for an hour of work (€):</label
       >
       <input
-        class="w-20 p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500"
+        class="w-20 p-2 text-amber-950 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs focus:ring-blue-500 focus:border-blue-500"
         type="number"
         id="hourly-rate-input"
         min="0"
         step="0.1"
         value="10"
       />
-      <div class="text-7xl mt-4 mb-4" id="timer">00:00:00</div>
+      <div class="text-7xl mt-4 mb-4 text-amber-500" id="timer">00:00:00</div>
       <div class="inline-flex rounded-md shadow-sm" role="group">
         <button
           type="button"
-          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-l-lg hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-amber-950 bg-transparent border border-gray-300 rounded-l-lg hover:bg-amber-700 hover:text-white focus:z-10 focus:bg-amber-700 focus:text-white"
           id="start"
         >
           <i class="fa-solid fa-hourglass-start pr-4"></i>
@@ -35,7 +35,7 @@
         </button>
         <button
           type="button"
-          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border-t border-b border-gray-900 hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-amber-950 bg-transparent border-t border-b border-gray-300 hover:bg-amber-700 hover:text-white focus:z-10 focus:bg-amber-700 focus:text-white"
           id="pause"
         >
           <i class="fa-solid fa-pause pr-4"></i>
@@ -44,7 +44,7 @@
         <button
           type="button"
           id="reset"
-          class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-transparent border border-gray-900 rounded-r-md hover:bg-gray-900 hover:text-white focus:z-10 focus:ring-2 focus:ring-gray-500 focus:bg-gray-900 focus:text-white"
+          class="inline-flex items-center px-4 py-2 text-sm font-medium text-amber-950 bg-transparent border border-gray-300 rounded-r-md hover:bg-amber-700 hover:text-white focus:z-10 focus:bg-amber-700 focus:text-white"
         >
           <i class="fa-solid fa-power-off pr-4"></i>
           Start over
