--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         data in this timer application. </br>
         Please keep this in mind if you wish to
         retain your progress.</br>
-        For the source code of this timer application,
+        For the source code of this timer application and additional informations,
         visit my GitHub profile at <a href="https://github.com/l4ur4nn3" class="text-gray-500 underline">GitHub - l4ur4nn3</a>.
       </p>
       <script src="src/script.js"></script>
