--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         <div id="payment-amount-value">0 €</div>
       </div>
     </div>
+<button onclick="navigateMonth(-1)">Previous</button>
+<button onclick="navigateMonth(1)">Next</button>
+
+  <div class="calendar-container w-5/12 ml-auto mr-auto mt-8" id="calendarContainer"></div>
     <footer class="w-5/12 ml-auto mr-auto text-gray-400 mt-8">
       <p class="text-xs italic text-center" data-translate="Note: Clearing your browser cache will result in the loss of any stored data in this timer application. Please keep this in mind if you wish to retain your progress.">
         Note: Clearing your browser cache will result in the loss of any stored
