current month ok

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </div>
 <button onclick="navigateMonth(-1)">Previous</button>
 <button onclick="navigateMonth(1)">Next</button>
+<div id="monthName"></div>
 
   <div class="calendar-container w-5/12 ml-auto mr-auto mt-8" id="calendarContainer"></div>
     <footer class="w-5/12 ml-auto mr-auto text-gray-400 mt-8">
