temporary removed the language choice

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body class="text-center text-amber-950">
     <header class="text-gray-400 mt-4 text-sm">
-        <button class="mr-4" onclick="changeLanguage('fr')">Français</button>
-        <button class="ml-4" onclick="changeLanguage('en')">English</button>
+        <!-- <button class="mr-4" onclick="changeLanguage('fr')">Français</button> -->
+        <!-- <button class="ml-4" onclick="changeLanguage('en')">English</button> -->
     </header>
     <div class="container w-full mr-auto ml-auto">
       <h1 class="text-3xl mt-4 mb-4" data-translate="Self-employed bill calculator">Self-employed bill calculator</h1>
