--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="ml-4" onclick="changeLanguage('en')">English</button>
     </header> -->
   <div id="unoptimized" class="py-48 px-10">
-    <p>This site isn't optimized for mobile devices under 768px width. Please try on another device.</p>
+    <p>This site isn't optimized for mobile devices under 768px width at the moment. Please try on another device or rotate your screen.</p>
   </div>
   <div id="optimized">
     <div class="container w-full mr-auto ml-auto">
