--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 
 
 <body class="text-center text-amber-950">
-  <!-- <header class="text-gray-400 mt-4 text-sm">
-        <button class="mr-4" onclick="changeLanguage('fr')">Français</button>
-        <button class="ml-4" onclick="changeLanguage('en')">English</button>
-    </header> -->
   <div id="unoptimized" class="py-48 px-10">
     <p>This site isn't optimized for mobile devices under 768px width at the moment. Please try on another device or rotate your screen.</p>
   </div>
@@ -74,7 +70,7 @@
         <div id="payment-amount-value">0 €</div>
       </div>
     </div>
-    <div class="inline-flex rounded-md shadow-sm max-lg:flex-col" role="group">
+    <div class="navigate-month inline-flex rounded-md shadow-sm max-lg:flex-col" role="group">
       <button onclick="navigateMonth(-1)"
         class="inline-flex items-center px-4 py-2 text-sm font-medium text-amber-950 bg-transparent border border-gray-300 rounded-l-lg hover:bg-amber-700 hover:text-white focus:z-10 focus:bg-amber-700 focus:text-white">Previous</button>
       <button onclick="navigateMonth(1)"
@@ -82,6 +78,12 @@
     </div>
     <div class="text-center max-lg:text-7xl max-sm:text-xs md:text-2xl mt-4 mb-4 text-amber-500" id="monthName"></div>
     <div class="calendar-container w-5/12 ml-auto mr-auto mt-8" id="calendarContainer"></div>
+    <div>
+      <p>
+        You've been working <span id="timeSum"></span> on your project this month.</br>
+        Since you're billing <span id="ogSalary"></span>€ per hour, you should be paid <span id="finalSalary"></span>.
+      </p>
+    </div>
   </div>
   <footer class="w-5/12 ml-auto mr-auto text-gray-400 mt-8">
     <p class="text-xs italic text-center"
@@ -97,7 +99,6 @@
       class="text-xs italic text-gray-500 underline">l4ur4nn3</a>.</span>
     </p>
     <script src="src/script.js"></script>
-    <script src="src/lang-fr.js" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/d74732e987.js" crossorigin="anonymous"></script>
   </footer>
 </body>
