temp rotate screen for mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="text-center text-amber-950">
   <div id="unoptimized" class="py-48 px-10">
     <p>This site isn't optimized for mobile devices under 768px width at the moment. Please try on another device or rotate your screen.</p>
+    <img class="ml-auto mr-auto" src="./src/25mIdTOFQV.gif">
   </div>
   <div id="optimized">
     <div class="container w-full mr-auto ml-auto">
