fixed last bugs, added instructions

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         </li>
         <li class="max-lg:mb-2">Hit "Reset" to start over and
           clear all recorded time.</li>
+        <li class="max-lg:mb-2">Click on a date on the calendar to add your working time in hh-mm format.</li>
+        <li class="max-lg:mb-2">To edit or delete, click on the same date.</li>
+        <li class="max-lg:mb-2">Be careful that a deleted entry cannot be recovered.</li>
       </ol>
       <img src="./src/undraw_time_management_re_tk5w.svg" class="max-lg:mb-6 max-md:w-3/4 max-lg:mr-auto max-lg:ml-auto w-1/4 ml-auto">
     </div>
