forgot to delete a br

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
     <div>
       <p class="w-1/2 text-left ml-auto mr-auto text-base max-md:text-sm">
-        You've been working <span class="text-amber-500" id="timeSum"></span></br> 
+        You've been working <span class="text-amber-500" id="timeSum"></span> 
         on your project this month.</br>
         Since you're billing <span id="ogSalary"></span>€ per hour, you should be paid <span class="text-amber-500" id="finalSalary"></span>.
       </p>
