--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         bg-gray-50 
         sm:text-xs 
         focus:ring-blue-500 focus:border-blue-500"
-        type="number" id="hourly-rate-input" min="0" step="0.1" value="10" />
+        type="number" id="hourly-rate-input" min="0" step="0.1" placeholder="10"/>
       <div class="text-center max-md:text-xl text-2xl mt-4 mb-4 text-amber-500" id="timer">00:00:00
       </div>
       <div class="inline-flex rounded-md shadow-sm max-md:flex-col" role="group">
