--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
   </div>
 
-  <footer class="text-left max-md:text-xs w-3/4 ml-auto mr-auto text-gray-400 mt-8 max-md:text-left">
+  <footer class="text-center max-md:text-xs w-3/4 ml-auto mr-auto text-gray-400 mt-8 mb-8">
     <p class="text-xs italic">
       Note: Clearing your browser cache will result in the loss of any stored data in this timer application. Please keep this in mind if you wish to retain your progress.</br>
       For the source code of this timer application and additional informations, visit my GitHub profile at </span><a href="https://github.com/l4ur4nn3"
