--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bill Calculator</title>
   <link href="/dist/output.css" rel="stylesheet" />
-  <link rel="icon" href="src/calculator-solid.svg" type="image/svg+xml" />
+  <link rel="icon" href="src/calculator.svg" type="image/svg+xml" />
 </head>
 
 
